infra/kubernetes/overlays/local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openlink
  namespace: openlink
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik

  tls:
    - hosts:
      - openlink.kvcs.me
      secretName: openlink-tls

  rules:
    - host: openlink.kvcs.me
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: openlink
                port:
                  number: 80
